@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Network Manager
-Comment=Network Manager applet
+_Name=Network Manager
+_Comment=Control your network connections
 Icon=nm-device-wireless
 Exec=nm-applet --sm-disable
 Terminal=false
