@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Network Configuration
-Comment=Network Manager configuration
+_Name=Network Connections
+_Comment=Manage and change your network connection settings
 Icon=nm-device-wireless
 Exec=nm-connection-editor
 Terminal=false
