@@ -1,6 +1,8 @@
 [encoding: UTF-8]
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
+nm-applet.desktop.in
+nm-connection-editor.desktop.in
 src/applet-dbus-manager.c
 src/applet-device-cdma.c
 src/applet-device-gsm.c
