@@ -1,3 +1,14 @@
+2008-11-14  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Kelemen Gábor <kelemeng@gnome.hu>
+
+	* Makefile.am
+	  nm-applet.desktop.in
+	  nm-connection-editor.desktop.in
+	  po/POTFILES.in
+		- Make desktop files translatable and fix up the descriptions to not
+			suck (bgo #559636)
+
 2008-11-13  Dan Williams  <dcbw@redhat.com>
 
 	Add support for PKCS#12 private keys (bgo #558982)
